# extref2bib

./: .gitmodules  CMakeLists.txt  README.md  main.cxx
include/extref2bib/: extref2bib.hxx
src/: extref2bib.cc
